--- a/Web/form application/index.html
+++ b/Web/form application/index.html
@@ -122,7 +122,8 @@
         </div>
     </div>
     <!--cdn of qr code library -->
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <!--<script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>-->
+    <script src="https://fastly.jsdelivr.net/gh/davidshimjs/qrcodejs@gh-pages/qrcode.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
