--- a/Web/view ticket/tick.html
+++ b/Web/view ticket/tick.html
@@ -154,7 +154,8 @@
 
     </div>
     
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <!-- <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script> -->
+    <script src="https://fastly.jsdelivr.net/gh/davidshimjs/qrcodejs@gh-pages/qrcode.min.js"></script>
     <script src="tick.js"></script>
     </body>
 
